--- a/prologin/contest/templates/correction/contestant-semifinal.html
+++ b/prologin/contest/templates/correction/contestant-semifinal.html
@@ -3,8 +3,8 @@
 
 {% block breadcrumbs %}
   {{ block.super }}
-  {% breadcrumb_for 'contest:correction-semifinal' edition.year event.pk %}{% trans "Regional event" %} {{ event.short_description }}{% endbreadcrumb_for %}
-  {% breadcrumb_for 'contest:correction-contestant-semifinal' edition.year contestant.pk %}{{ contestant.user.username }}{% endbreadcrumb_for %}
+  {% breadcrumb_for 'contest:correction:semifinal' edition.year event.pk %}{% trans "Regional event" %} {{ event.short_description }}{% endbreadcrumb_for %}
+  {% breadcrumb_for 'contest:correction:contestant-semifinal' edition.year contestant.pk %}{{ contestant.user.username }}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block correction_title %}{{ contestant.user }} <small>{{ event_type|choiceenum_label }} {{ event.short_description }}</small>{% endblock %}
