--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -12,6 +12,13 @@
 {% block title %}{% if year %}{% blocktrans %}{{ year }} documents{% endblocktrans %}{% else %}{% trans "Document index" %}{% endif %}{% endblock %}
 
 {% block content %}
+
+  <div class="pull-right">
+    <a href="{% url 'documents:semifinal-data-import' %}" class="btn btn-info">
+      <i class="fa fa-download"></i> {% trans "Data import" %}
+    </a>
+  </div>
+
   <h1>{% if year %}{% blocktrans %}{{ year }} documents{% endblocktrans %}{% else %}{% trans "Document index" %}{% endif %}</h1>
 
   <ul class="pager align-left">
@@ -31,19 +38,19 @@
           <tr>
             <td><strong>{% trans "All centers" %}</strong></td>
             <td>
-              <a href="{% url 'documents:semifinal-convocations' year 'all' %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:convocations' year 'all' %}" class="btn btn-default btn-xs">
                 <i class="fa fa-graduation-cap"></i> {% trans "Convocations" %}
               </a>
-              <a href="{% url 'documents:semifinal-contestants' year 'all' %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:contestants' year 'all' %}" class="btn btn-default btn-xs">
                 <i class="fa fa-list-alt"></i> {% trans "Contestants" %}
               </a>
-              <a href="{% url 'documents:semifinal-interviews' year 'all' %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:interviews' year 'all' %}" class="btn btn-default btn-xs">
                 <i class="fa fa-black-tie"></i> {% trans "Interviews" %}
               </a>
-              <a href="{% url 'documents:semifinal-passwords' year 'all' %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:passwords' year 'all' %}" class="btn btn-default btn-xs">
                 <i class="fa fa-key"></i> {% trans "Passwords" %}
               </a>
-              <a href="{% url 'documents:semifinal-portrayal-agreement' year %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:portrayal-agreement' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-camera"></i> {% trans "Portrayal agreement" %}
               </a>
             </td>
@@ -52,19 +59,19 @@
           <tr>
             <td>{{ event.center.name }} <small class="text-muted">{{ event.date_begin|date:"SHORT_DATE_FORMAT" }}</small></td>
             <td>
-              <a href="{% url 'documents:semifinal-data-export' year event.pk %}" class="btn btn-warning btn-xs">
+              <a href="{% url 'documents:semifinal:data-export' year event.pk %}" class="btn btn-warning btn-xs">
                 <i class="fa fa-upload"></i> {% trans "Data export" %}
               </a>
-              <a href="{% url 'documents:semifinal-convocations' year event.pk %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:convocations' year event.pk %}" class="btn btn-default btn-xs">
                 <i class="fa fa-graduation-cap"></i> {% trans "Convocations" %}
               </a>
-              <a href="{% url 'documents:semifinal-contestants' year event.pk %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:contestants' year event.pk %}" class="btn btn-default btn-xs">
                 <i class="fa fa-list-alt"></i> {% trans "Contestants" %}
               </a>
-              <a href="{% url 'documents:semifinal-interviews' year event.pk %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:interviews' year event.pk %}" class="btn btn-default btn-xs">
                 <i class="fa fa-black-tie"></i> {% trans "Interviews" %}
               </a>
-              <a href="{% url 'documents:semifinal-passwords' year event.pk %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:semifinal:passwords' year event.pk %}" class="btn btn-default btn-xs">
                 <i class="fa fa-key"></i> {% trans "Passwords" %}
               </a>
             </td>
@@ -88,16 +95,16 @@
               <small class="text-muted">{{ final.date_begin|date:"SHORT_DATE_FORMAT" }}</small>
             </td>
             <td>
-              <a href="{% url 'documents:final-convocations' year %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:final:convocations' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-graduation-cap"></i> {% trans "Convocations" %}
               </a>
-              <a href="{% url 'documents:final-contestants' year %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:final:contestants' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-list-alt"></i> {% trans "Contestants" %}
               </a>
-              <a href="{% url 'documents:final-passwords' year %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:final:passwords' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-key"></i> {% trans "Passwords" %}
               </a>
-              <a href="{% url 'documents:final-portrayal-agreement' year %}" class="btn btn-default btn-xs">
+              <a href="{% url 'documents:final:portrayal-agreement' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-camera"></i> {% trans "Portrayal agreement" %}
               </a>
             </td>
