--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -14,7 +14,7 @@
       <li><a href="{% url 'admin:index' %}">{% trans "Django administration" %}</a></li>
       <li class="divider"></li>
       {% has_perm 'correction.can_correct' request.user None as can_correct %}
-      {% if can_correct %}<li><a href="{% url 'contest:correction-index' %}"><i class="fa fa-wrench"></i> {% trans "Correction" %}</a></li>{% endif %}
+      {% if can_correct %}<li><a href="{% url 'contest:correction:index' %}"><i class="fa fa-wrench"></i> {% trans "Correction" %}</a></li>{% endif %}
       {% has_perm 'documents.generate_batch_document' request.user None as can_correct %}
       {% if can_correct %}<li><a href="{% url 'documents:index' %}"><i class="fa fa-archive"></i> {% trans "Documents" %}</a></li>{% endif %}
     </ul>
