--- a/prologin/contest/templates/correction/by-year.html
+++ b/prologin/contest/templates/correction/by-year.html
@@ -4,8 +4,8 @@
 {% block breadcrumbs %}
   {{ block.super }}
   {% breadcrumb_for '' %}{% trans "Contest" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for 'contest:correction-index' %}{% trans "Correction" %}{% endbreadcrumb_for %}
-  {% breadcrumb edition.year 'contest:correction-year' edition.year %}
+  {% breadcrumb_for 'contest:correction:index' %}{% trans "Correction" %}{% endbreadcrumb_for %}
+  {% breadcrumb edition.year 'contest:correction:year' edition.year %}
 {% endblock breadcrumbs %}
 
 {% block title %}{{ edition.year }} — {% trans "Correction" %}{% endblock %}
