--- a/prologin/contest/templates/correction/contestant-qualification.html
+++ b/prologin/contest/templates/correction/contestant-qualification.html
@@ -3,8 +3,8 @@
 
 {% block breadcrumbs %}
   {{ block.super }}
-  {% breadcrumb_for 'contest:correction-qualification' edition.year %}{% trans "Qualification" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for 'contest:correction-contestant-qualification' edition.year contestant.pk %}{{ contestant.user.username }}{% endbreadcrumb_for %}
+  {% breadcrumb_for 'contest:correction:qualification' edition.year %}{% trans "Qualification" %}{% endbreadcrumb_for %}
+  {% breadcrumb_for 'contest:correction:contestant-qualification' edition.year contestant.pk %}{{ contestant.user.username }}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block extra_head %}
