--- a/prologin/contest/templates/correction/index.html
+++ b/prologin/contest/templates/correction/index.html
@@ -4,7 +4,7 @@
 {% block breadcrumbs %}
   {{ block.super }}
   {% breadcrumb_for "" %}{% trans "Contest" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for "contest:correction-index" %}{% trans "Correction" %}{% endbreadcrumb_for %}
+  {% breadcrumb_for "contest:correction:index" %}{% trans "Correction" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "Correction" %}{% endblock %}
@@ -27,7 +27,7 @@
       {% with group.grouper as year %}
       <tr id="year-{{ year }}">
         <th colspan="2">{{ year }}</th>
-        <th><a href="{% url 'contest:correction-year' year %}" class="btn btn-xs btn-primary"><i class="fa fa-list-alt"></i> {% trans "Browse" %}</a></th>
+        <th><a href="{% url 'contest:correction:year' year %}" class="btn btn-xs btn-primary"><i class="fa fa-list-alt"></i> {% trans "Browse" %}</a></th>
       </tr>
       {% endwith %}
       {% for event in group.list|dictsort:'date_begin' %}
