--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -19,11 +19,17 @@
 
   <meta name="description" content="{% block meta_descr %}{% endblock %}">
 
-  <meta property="og:title" content="{% trans "Prologin, the French computing contest" %}"/>
-  <meta property="og:type" content="product"/>
-  <meta property="og:image" content="{% static 'img/logo_cube.png' %}"/>
-  <meta property="og:site_name" content="{% trans "Prologin, the French computing contest" %}"/>
-  <meta property="fb:admins" content=""/>
+  <meta property="og:site_name" content="{% trans "Prologin" %}"/>
+  <meta property="og:title" content="{% trans "Prologin, the French National Computer Science Contest" %}"/>
+  <meta property="og:description" content="{% trans "Prologin is a computer science contest. Our goal is to introduce students to the world of programming and algorithms by subjecting them to several conventional problems and exciting challenges." %}"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/apple-touch-icon-180.png' %}?og20160216"/>
+  <meta property="og:image:type" content="image/png"/>
+  <meta property="og:image:width" content="180"/>
+  <meta property="og:image:height" content="180"/>
+  <meta property="og:locale" content="{{ LANGUAGE_CODE }}"/>
+  {% get_available_languages as LANGUAGES %}
+  {% for code, language in LANGUAGES %}{% if code != LANGUAGE_CODE %}<meta property="og:locale:alternate" content="{{ code }}"/>{% endif %}{% endfor %}
 
 {% include "prologin/favicons.html" %}
 
