misc: templates: automatic cleanup of {% load %} tags
- fix whitespaces
- replace 'static' with 'staticfiles'
- put builtin libraries in a first line, sorted
- then put third party libraries in another line, sorted

--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n l10n django_bootstrap_breadcrumbs %}
+{% load i18n l10n %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
