--- a/prologin/contest/templates/correction/index.html
+++ b/prologin/contest/templates/correction/index.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n utils markup django_bootstrap_breadcrumbs %}
+{% load i18n %}
+{% load django_bootstrap_breadcrumbs markup utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
