--- a/prologin/documents/templates/documents/semifinal-import-base.html
+++ b/prologin/documents/templates/documents/semifinal-import-base.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n bootstrap staticfiles django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
