--- a/prologin/documents/templates/documents/semifinal-import-upload.html
+++ b/prologin/documents/templates/documents/semifinal-import-upload.html
@@ -1,5 +1,6 @@
 {% extends "documents/semifinal-import-base.html" %}
-{% load i18n bootstrap %}
+{% load i18n %}
+{% load bootstrap %}
 
 {% block form-content %}
   {{ wizard.form|bootstrap_horizontal }}
