--- a/prologin/documents/templates/documents/tex-error-debug.html
+++ b/prologin/documents/templates/documents/tex-error-debug.html
@@ -1,5 +1,6 @@
 {% extends "_error_base.html" %}
-{% load i18n django_bootstrap_breadcrumbs %}
+{% load i18n %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
