--- a/prologin/forum/templates/forum/base.html
+++ b/prologin/forum/templates/forum/base.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load static i18n utils django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs utils %}
 
 {# FIXME: find a way of not repeating base.super_title ie. "— Prologin"; {{ block.super }} does not work as expected #}
 {% block super_title %}{% block title %}{% endblock %} – Forums — Prologin{% endblock %}
