--- a/prologin/forum/templates/forum/index.html
+++ b/prologin/forum/templates/forum/index.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n markup humanize django_bootstrap_breadcrumbs %}
-
+{% load humanize i18n %}
+{% load django_bootstrap_breadcrumbs markup %}
 
 {% block breadcrumbs %}
   {{ block.super }}
