--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static zinnia news_tags %}
+{% load i18n staticfiles %}
+{% load news_tags zinnia %}
 
 {% block super_title %}{% trans "Prologin, the French National Computer Science Contest" %}{% endblock %}
 
