--- a/prologin/news/templates/zinnia/entry_list.html
+++ b/prologin/news/templates/zinnia/entry_list.html
@@ -1,5 +1,6 @@
 {% extends "zinnia/base.html" %}
-{% load i18n zinnia news_tags %}
+{% load i18n %}
+{% load news_tags zinnia %}
 
 {% block meta-description %}{% spaceless %}
 {% if category %}
