--- a/prologin/problems/templates/problems/index.html
+++ b/prologin/problems/templates/problems/index.html
@@ -1,5 +1,6 @@
 {% extends "problems/base.html" %}
-{% load i18n utils bootstrap django_bootstrap_breadcrumbs %}
+{% load i18n %}
+{% load bootstrap django_bootstrap_breadcrumbs utils %}
 
 {% block title %}{% include "problems/stub-module-title.html" %}{% endblock %}
 
