--- a/prologin/problems/templates/problems/problem.html
+++ b/prologin/problems/templates/problems/problem.html
@@ -1,6 +1,6 @@
 {% extends "problems/base.html" %}
-{% load i18n markup drupal rules utils bootstrap staticfiles django_bootstrap_breadcrumbs %}
-
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs drupal markup rules utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
