--- a/prologin/problems/templates/problems/stub_search_form.html
+++ b/prologin/problems/templates/problems/stub_search_form.html
@@ -1,4 +1,6 @@
-{% load i18n bootstrap %}
+{% load i18n %}
+{% load bootstrap %}
+
 <form class="form-inline well" method="GET" action="{% url 'problems:search' %}#problems">
   <h4>{% trans "Search problems" %}</h4>
   {{ search_form.query|bootstrap }}
