--- a/prologin/problems/templates/problems/submission.html
+++ b/prologin/problems/templates/problems/submission.html
@@ -1,6 +1,6 @@
 {% extends "problems/base.html" %}
-{% load i18n humanize markup drupal utils bootstrap staticfiles django_bootstrap_breadcrumbs %}
-
+{% load humanize i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs drupal markup utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
