--- a/prologin/prologin/templates/503.html
+++ b/prologin/prologin/templates/503.html
@@ -1,5 +1,6 @@
-{% load static i18n utils %}
-{% load django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs utils %}
+
 {% get_current_language as LANGUAGE_CODE %}
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}">
