--- a/prologin/semifinal/templates/semifinal/monitoring.html
+++ b/prologin/semifinal/templates/semifinal/monitoring.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static humanize utils django_bootstrap_breadcrumbs %}
+{% load humanize i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
