--- a/prologin/users/templates/users/mails/pswd_reset.subject.html
+++ b/prologin/users/templates/users/mails/pswd_reset.subject.html
@@ -1,1 +1,3 @@
-{% load i18n %}{% trans "Your Prologin password reset request" %}
+{% load i18n %}
+
+{% trans "Your Prologin password reset request" %}
