--- a/prologin/users/templates/users/unsubscribe.html
+++ b/prologin/users/templates/users/unsubscribe.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load static i18n bootstrap %}
+{% load i18n staticfiles %}
+{% load bootstrap %}
 
 {% block title %}{% trans "Unsubscribe" %}{% endblock %}
 
