--- a/prologin/archives/templates/archives/index.html
+++ b/prologin/archives/templates/archives/index.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n cache utils staticfiles django_bootstrap_breadcrumbs %}
+{% load cache i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
