--- a/prologin/contest/templates/contest/qualification_summary.html
+++ b/prologin/contest/templates/contest/qualification_summary.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static django_bootstrap_breadcrumbs bootstrap %}
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
