--- a/prologin/contest/templates/correction/contestant-semifinal.html
+++ b/prologin/contest/templates/correction/contestant-semifinal.html
@@ -1,5 +1,6 @@
 {% extends "correction/contestant-base.html" %}
-{% load i18n static bootstrap utils markup django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs markup utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
