--- a/prologin/documents/templates/documents/semifinal-import-review.html
+++ b/prologin/documents/templates/documents/semifinal-import-review.html
@@ -1,5 +1,6 @@
 {% extends "documents/semifinal-import-base.html" %}
-{% load i18n bootstrap %}
+{% load i18n %}
+{% load bootstrap %}
 
 {% block extra_head %}
   {{ block.super }}
