--- a/prologin/forum/templates/forum/create_thread.html
+++ b/prologin/forum/templates/forum/create_thread.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n markup bootstrap django_bootstrap_breadcrumbs %}
-
+{% load i18n %}
+{% load bootstrap django_bootstrap_breadcrumbs markup %}
 
 {% block breadcrumbs %}
   {{ block.super }}
