--- a/prologin/forum/templates/forum/edit_post.html
+++ b/prologin/forum/templates/forum/edit_post.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n static humanize markup bootstrap django_bootstrap_breadcrumbs %}
-
+{% load humanize i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs markup %}
 
 {% block breadcrumbs %}
   {{ block.super }}
