--- a/prologin/forum/templates/forum/forum_threads.html
+++ b/prologin/forum/templates/forum/forum_threads.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n rules markup django_bootstrap_breadcrumbs %}
-
+{% load i18n %}
+{% load django_bootstrap_breadcrumbs markup rules %}
 
 {% block breadcrumbs %}
   {{ block.super }}
