--- a/prologin/forum/templates/forum/post_confirm_delete.html
+++ b/prologin/forum/templates/forum/post_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n rules django_bootstrap_breadcrumbs %}
-
+{% load i18n %}
+{% load django_bootstrap_breadcrumbs rules %}
 
 {% block breadcrumbs %}
   {{ block.super }}
