--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
-{% load i18n static rules humanize markup bootstrap django_bootstrap_breadcrumbs %}
-
+{% load humanize i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs markup rules %}
 
 {% block breadcrumbs %}
   {{ block.super }}
