--- a/prologin/news/templates/zinnia/entry_detail_base.html
+++ b/prologin/news/templates/zinnia/entry_detail_base.html
@@ -1,5 +1,7 @@
 {% extends "zinnia/base.html" %}
-{% load i18n comments zinnia %}
+{% load i18n %}
+{% load comments zinnia %}
+
 {% load cycle from future %}
 
 {% block title %}{{ object.title }}{% endblock title %}
