--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -1,6 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static utils %}
-{% load django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
