--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -1,5 +1,5 @@
 {% extends "prologin/base.html" %}
-{% load i18n static %}
+{% load i18n staticfiles %}
 {% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
