--- a/prologin/problems/templates/problems/challenge-scoreboard.html
+++ b/prologin/problems/templates/problems/challenge-scoreboard.html
@@ -1,5 +1,6 @@
 {% extends "problems/base.html" %}
-{% load i18n utils humanize django_bootstrap_breadcrumbs %}
+{% load humanize i18n %}
+{% load django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
