--- a/prologin/problems/templates/problems/search_results.html
+++ b/prologin/problems/templates/problems/search_results.html
@@ -1,5 +1,6 @@
 {% extends "problems/base.html" %}
-{% load i18n utils bootstrap staticfiles django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
