--- a/prologin/prologin/templates/prologin/favicons.html
+++ b/prologin/prologin/templates/prologin/favicons.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load staticfiles %}
+
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'img/apple-touch-icon-57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'img/apple-touch-icon-60.png' %}">
 <link rel="apple-touch-icon" sizes="72x72" href="{% static 'img/apple-touch-icon-72.png' %}">
