--- a/prologin/qcm/templates/qcm/display.html
+++ b/prologin/qcm/templates/qcm/display.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static markup staticfiles django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load django_bootstrap_breadcrumbs markup %}
 
 {% block breadcrumbs %}
   {{ block.super }}
