--- a/prologin/semifinal/templates/prologin/main-footer.html
+++ b/prologin/semifinal/templates/prologin/main-footer.html
@@ -1,4 +1,6 @@
-{% load i18n utils %}
+{% load i18n %}
+{% load utils %}
+
 <div class="row">
   <div class="col-xs-6 col-md-4">
     <h3>{% trans "Prologin" %}</h3>
