--- a/prologin/semifinal/templates/semifinal/explicit-unlock.html
+++ b/prologin/semifinal/templates/semifinal/explicit-unlock.html
@@ -1,5 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n static humanize utils bootstrap django_bootstrap_breadcrumbs %}
+{% load humanize i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs utils %}
 
 {% block breadcrumbs %}
   {{ block.super }}
