--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -1,6 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load i18n bootstrap %}
-{% load django_bootstrap_breadcrumbs %}
+{% load i18n %}
+{% load bootstrap django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
