--- a/prologin/users/templates/users/login.html
+++ b/prologin/users/templates/users/login.html
@@ -1,6 +1,6 @@
 {% extends "prologin/base.html" %}
-{% load static i18n bootstrap %}
-{% load django_bootstrap_breadcrumbs %}
+{% load i18n staticfiles %}
+{% load bootstrap django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
