assets: move mathjax out of CDN to hosted

--- a/prologin/forum/templates/forum/edit_post.html
+++ b/prologin/forum/templates/forum/edit_post.html
@@ -36,5 +36,5 @@
 {% endblock %}
 
 {% block extra_script %}
-  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  {% include "stub-mathjax.html" %}
 {% endblock %}
