--- a/prologin/contest/templates/correction/by-year.html
+++ b/prologin/contest/templates/correction/by-year.html
@@ -17,7 +17,13 @@
 
   <table class="table table-striped table-hover">
     <thead>
-      <tr><th>{% trans "Event type" %}</th><th>{% trans "Center" %}</th><th>{% trans "Contestants" %}</th><th></th></tr>
+      <tr>
+        <th>{% trans "Event type" %}</th>
+        <th>{% trans "Center" %}</th>
+        <th>{% trans "Contestants" %}</th>
+        <th>{% trans "Submissions" %}</th>
+        <th></th>
+      </tr>
     </thead>
     <tbody>
     {% for event in events %}
@@ -25,6 +31,11 @@
         <td>{{ event.get_type_display }}</td>
         <td>{{ event.center.name }} <span class="text-muted">{{ event.date_begin|date:"SHORT_DATE_FORMAT" }}</span></td>
         <td>{{ event.contestant_count }}</td>
+        <td>
+          {% if event.submission_count %}<span class="label label-success"><i class="fa fa-check"></i> {{ event.submission_count }}</span>
+          {% else %}<span class="label label-warning"><i class="fa fa-warning"></i> 0</span>
+          {% endif %}
+        </td>
         <td><a href="{{ event.absolute_url }}" class="btn btn-default btn-xs"><i class="fa fa-wrench"></i> {% trans "Correct" %}</a></td>
       </tr>
     {% endfor %}
